--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 #todos os arquivos checkpoint
 .ipynb_checkpoints/
 
+#arquivos pycache  api
+*.pyc
+
 #arquivo planejamento
 planejamento
 
+#teste
+*.txt
+#problema de negocio
+problema_negocio
