the last commit parameter and models

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ problema_negocio
 
 #file pyc
 api/insurance/__pycache__/Insurance.cpython-38.pyc
+
+#archive of git
+..gitignore.swp
+
+#documents of web
+api_web/
+
+#virtual ambiente of deploy
+webinsurance/
